<resources>
    <string name="app_name">חדר בריחה</string>

    <!-- Login Screen -->
    <string name="login_title">גישה למערכת</string>
    <string name="hint_username">מזהה / שם משתמש</string>
    <string name="hint_password">קוד גישה</string>
    <string name="btn_login">התחברות</string>
    <string name="status_secure">חיבור מאובטח נוצר</string>
    <string name="login_success">התחברות הצליחה!</string>
    <string name="login_error">שגיאת התחברות: שם משתמש או סיסמה שגויים</string>
    <string name="connection_error">שגיאת חיבור: לא ניתן להתחבר לשרת</string>
    <string name="signup_link">שחקן חדש? הירשם כאן</string>

    <!-- Home Page -->
    <string name="home_title">מרכז פיקוד</string>
    <string name="btn_original_room">חדר בריחה מקורי</string>
    <string name="btn_community_rooms">חדרי קהילה</string>
    <string name="btn_create_room">יצירת חדר</string>
    <string name="btn_signup">הרשמה</string>

    <!-- Game Screen -->
    <string name="btn_submit">המשך</string>
    <string name="msg_answer_all">אנא ענה על כל השאלות.</string>
    <string name="msg_room_cleared">חדר %1$d הושלם!</string>
    <string name="msg_incorrect">טעות. השעון מתקתק!</string>

    <!-- Results Screen -->
    <string name="results_title">תחקיר משימה</string>
    <string name="label_room">חדר %1$d:</string>
    <string name="label_total_time">זמן כולל: %1$s</string>
    <string name="btn_proceed_rating">המשך לדירוג</string>
    <string name="btn_back_home">חזרה למרכז הפיקוד</string>

    <!-- Rating Screen -->
    <string name="rating_title">דרג את החוויה</string>
    <string name="rating_desc">המשוב שלך עוזר לשפר את המגזר</string>
    <string name="btn_confirm_rating">אשר דירוג</string>
    <string name="msg_rating_saved">דירוג נשמר: %1$d</string>
    <string name="start_game">התחל לשחק</string>
    <string name="choose_the_game_configuration">בחר את המשחק</string>
    <string name="unlocked">הדלת נפתחה</string>

    <!-- Game Configuration -->
    <string name="category_geography">מדעי הגאוגרפיה</string>
    <string name="category_history">היסטוריה</string>
    <string name="category_famous">מפורסמים</string>
    <string name="category_sports">ספורט</string>
    <string name="category_science">מדע</string>
    <string name="select_category_prompt">אנא בחר קטגוריה</string>
    <string name="creation_option_existing">השתמש במשחק קיים</string>
    <string name="creation_option_ai">צור משחק בעזרת AI</string>
    <string name="textforimage">textForImage</string>
    <string name="invisiblebutton">invisibleButton</string>
    <string name="select_creation_type_prompt">אנא בחר סוג יצירה</string>
    <string name="drawer">Drawer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>
