<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/room_dark_bg"
    android:padding="24dp"
    tools:context=".ui.ChoosingGameVarient">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:letterSpacing="0.2"
        android:text="@string/choose_the_game_configuration"
        android:textColor="@color/room_primary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startGameButton"
        style="@style/Widget.EscapeRooms.Button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="68dp"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_creation_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radio_existing_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/creation_option_existing"
            android:textColor="@color/text_primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_ai_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creation_option_ai"
            android:textColor="@color/text_primary"
            android:textSize="18sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_group_game_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_creation_type">

        <RadioButton
            android:id="@+id/radio_geography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/category_geography"
            android:textColor="@color/text_primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/category_history"
            android:textColor="@color/text_primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_famous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/category_famous"
            android:textColor="@color/text_primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_sports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_sports"
            android:textColor="@color/text_primary"
            android:textSize="18sp" />
    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
