<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/room_dark_bg"
    android:padding="24dp">

    <TextView
        android:id="@+id/tv_rating_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_title"
        android:textColor="@color/room_primary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"/>

    <TextView
        android:id="@+id/tv_rating_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_desc"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_rating_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0"
        android:progressTint="@color/room_accent"
        android:progressBackgroundTint="@color/room_surface"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_rating_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_submit_rating"
        style="@style/Widget.EscapeRooms.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_confirm_rating"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
