<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/room_dark_bg"
    android:padding="24dp"
    tools:context=".ui.Corridor">

    <TextView
        android:id="@+id/tv_rate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_title"
        android:textColor="@color/room_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:letterSpacing="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0"
        android:progressTint="@color/room_accent"
        android:secondaryProgressTint="@color/room_accent"
        android:progressBackgroundTint="@color/text_secondary"
        app:layout_constraintTop_toBottomOf="@id/tv_rate_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp" />

    <TextView
        android:id="@+id/tv_rating_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_desc"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/ratingBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btn_finish_rating"
        style="@style/Widget.EscapeRooms.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_confirm_rating"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>